<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateVisible|adjustResize"
    tools:context=".InfoPicker">

    <TextView
        android:id="@+id/pickerTitle"
        android:text="@string/create_new_event"
        android:textSize="36sp"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/priorityDesc"/>

    <TextView
        android:id="@+id/priorityDesc"
        android:text="@string/enter_priority"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickerTitle"
        app:layout_constraintBottom_toTopOf="@+id/priorityInput"/>

    <EditText
        android:id="@+id/priorityInput"
        android:hint="@string/priority"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:inputType="date"
        android:ems="10"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityDesc"
        app:layout_constraintBottom_toTopOf="@+id/dateDescription"/>

    <TextView
        android:id="@+id/dateDescription"
        android:text="@string/dateDescriptionText"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityInput"
        app:layout_constraintBottom_toTopOf="@+id/dateInput"/>

    <EditText
        android:id="@+id/dateInput"
        android:hint="@string/dateInputText"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:inputType="date"
        android:ems="10"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDescription"
        app:layout_constraintBottom_toTopOf="@+id/eventTitle"/>

    <TextView
        android:id="@+id/eventTitle"
        android:text="@string/eventTitle"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateInput"
        app:layout_constraintBottom_toTopOf="@+id/eventTitleInput"/>

    <EditText
        android:id="@+id/eventTitleInput"
        android:hint="@string/eventTitleText"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitle"
        app:layout_constraintBottom_toTopOf="@+id/eventDescription"/>

    <TextView
        android:id="@+id/eventDescription"
        android:text="@string/eventDescriptionText"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleInput"
        app:layout_constraintBottom_toTopOf="@+id/eventInput"/>

    <EditText
        android:id="@+id/eventInput"
        android:hint="@string/eventDescription"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDescription"
        app:layout_constraintBottom_toTopOf="@+id/iconsList"/>

    <ListView
        android:id="@+id/iconsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:choiceMode="singleChoice"
        android:focusable="true"
        android:listSelector="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventInput"/>

    <Button
        android:id="@+id/confirmationButton"
        android:text="@string/confirm"
        android:fontFamily="serif"
        android:onClick="addInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/iconsList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>